@@ -70,8 +70,8 @@ if ($_POST) {
 		
 		if (!empty($_POST['key'])) {
 			$reqdfields = array_merge($reqdfields, array("key"));
-			$reqdfieldsn = array_merge($reqdfieldsn, array(gettext("Private key")));
-			$reqdfieldst = array_merge($reqdfieldst, array("privatedsakey"));
+			$reqdfieldsn = array_merge($reqdfieldsn, array(gettext("Private Key")));
+			$reqdfieldst = array_merge($reqdfieldst, array("privatekey"));
 		}
 	}
 
@@ -164,7 +164,7 @@ function enable_change(enable_change) {
 			        <?=gettext("Enable compression.");?><br />
 			        <span class="vexpl"><?=gettext("Compression is worth using if your connection is slow. The efficiency of the compression depends on the type of the file, and varies widely. Useful for internet transfer only.");?></span></td>
 			    </tr>
-					<?php html_textarea("key", gettext("Private Key"), $pconfig['key'], gettext("Paste a DSA PRIVATE KEY in PEM format here."), false, 65, 7, false, false);?>
+					<?php html_textarea("key", gettext("Private Key"), $pconfig['key'], gettext("Paste a RSA PRIVATE KEY in PEM format here."), false, 65, 7, false, false);?>
 			    <?php html_inputbox("subsystem", gettext("Subsystem"), $pconfig['subsystem'], gettext("Leave this field empty to use default settings."), false, 40);?>
 			    <?php html_textarea("auxparam", gettext("Extra options"), !empty($pconfig['auxparam']) ? $pconfig['auxparam'] : "", gettext("Extra options to /etc/ssh/sshd_config (usually empty). Note, incorrect entered options prevent SSH service to be started.") . " " . sprintf(gettext("Please check the <a href='%s' target='_blank'>documentation</a>."), "http://www.freebsd.org/cgi/man.cgi?query=sshd_config&amp;apropos=0&amp;sektion=0&amp;manpath=FreeBSD+${os_release}-RELEASE&amp;format=html"), false, 65, 5, false, false);?>
 			  </table>
